--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,24 +11,35 @@
     <div class="row">
       <div class="col-6">
         <label for="">Filtrar por</label>
-        <select class="form-select" formControlName="filtro">
+        <select class="form-select" (change)= "cambiar()"  formControlName="filtro">
           <option value="todos" selected>Todos</option>
           <option value="lenguage">Lenguaje</option>
           <option value="region">Continente</option>
           <option value="moneda">Moneda</option>
         </select>
       </div>
-      <div class="col-6">
+      <div class="col-6" [ngStyle]="{'visibility': showSelect?'visible':'hidden'}">
         <label for="">Valor</label>
         <input type="text" class="form-control" formControlName="valor" />
+        <span *ngIf="valorVacio" class="color-warning">Ingrese un valor a buscar</span>
       </div>
     </div>
     <input class="btn btn-primary mt-2" type="submit" value="Filtrar" />
   </form>
 </div>
 
-<div class="m-2">
-  <table class="table table-responsive table-striped table-hover">
+<div class="content-table m-2">
+  <div *ngIf="spinner" class="sk-chase">
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+    <div class="sk-chase-dot"></div>
+  </div>
+
+  <div *ngIf="paises.length===0 && !spinner && !valorVacio" class="no-data">  No existen datos para mostrar</div>
+  <table *ngIf="paises.length>0" [ngStyle]="{'display': spinner?'none':''}" class="table table-responsive table-striped table-hover">
     <thead>
       <th>Nombre</th>
       <th>Capital</th>
